--- a/Phase1_Aviation_Project.ipynb
+++ b/Phase1_Aviation_Project.ipynb
@@ -2441,7 +2441,7 @@
    "source": [
     "From the analysis conducted on the aviation data, the observations were made:\n",
     "\n",
-    "   1. Cessna and Piper aircraft makes are associated with the highest injury and icident rates\n",
+    "   1. Cessna and Piper aircraft makes are associated with the highest injury and incident rates\n",
     "   2. Boeing aircraft have higher survivability rates and are not listed among the top 10 high-risk aircraft makes. \n",
     "   3.  The trend analysis shows a gradual decline in airplane incidents over the years, reflecting improvements in aviation technology, safety protocols, and regulatory oversight.\n",
     "   4. Most injuries occur during Cruise and Take-Off phases, indicating critical points where enhanced safety measures are necessary. \n",
